Fix minor layout bugs
Adjusted the heading on the homepage for small
screens, centered the loading spinners, centered
the answer buttons during the game and adjusted
the mind-width of the td elements in the high
score tables.

--- a/frontend/src/Home.css
+++ b/frontend/src/Home.css
@@ -68,3 +68,9 @@
     font-size: 4rem;
   }
 }
+
+@media (max-width: 420px) {
+  .home-heading {
+    font-size: 3.5rem;
+  }
+}
