--- a/frontend/src/high-scores/pages/HighScores.css
+++ b/frontend/src/high-scores/pages/HighScores.css
@@ -88,7 +88,4 @@ td {
   .high-scores-navigation-link {
     font-size: 1.125rem;
   }
-  td {
-    min-width: 5em;
-  }
 }
